// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationFiltersContainer does not render aggregations with empty buckets 1`] = `
<div
  className="__AggregationFiltersContainer__ bg-white pa3"
>
  <div
    key="agg"
  >
    <AggregationFilter
      buckets={
        Immutable.List [
          Immutable.Map {
          },
        ]
      }
      name="Jessica Jones"
      onChange={[Function]}
      range={false}
      selections={Array []}
    />
  </div>
</div>
`;

exports[`AggregationFiltersContainer renders initial state with initial url query q param 1`] = `
<div
  className="__AggregationFiltersContainer__ bg-white pa3"
>
  <div
    key="agg1"
  >
    <AggregationFilter
      buckets={
        Immutable.List [
          Immutable.Map {
          },
        ]
      }
      name="Jessica Jones"
      onChange={[Function]}
      range={false}
      selections={
        Array [
          "agg1-selected",
        ]
      }
    />
  </div>
  <div
    key="agg2"
  >
    <AggregationFilter
      buckets={
        Immutable.List [
          Immutable.Map {
          },
        ]
      }
      name="Luke Cage"
      onChange={[Function]}
      range={false}
      selections={Array []}
    />
  </div>
</div>
`;
